--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
 
+
 </head>
 
 <body>
-
-
     <div class="player">
         <!-- Dashboard -->
         <div class="dashboard">
             <!-- Header -->
             <header>
                 <h4>Now playing:</h4>
-                <h2>String 57th & 9th</h2>
+                <h2></h2>
             </header>
 
             <!-- CD -->
             <div class="cd">
-                <div class="cd-thumb"
-                    style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg')">
+                <div class="cd-thumb" style="background-image: url('')">
                 </div>
             </div>
 
@@ -65,10 +63,10 @@
 
         </div>
     </div>
-
+    <script src="./assets/javascript.js"></script>
     <!-- Design from: https://static.collectui.com/shots/3671744/musicloud-revolutionary-app-for-music-streaming-large -->
 
-    <script>
+    <!-- <script>
         /*
         1. Render songs
         2. Scroll top
@@ -359,7 +357,7 @@
         }
 
         app.start();
-    </script>
+    </script> -->
 </body>
 
 </html>
